tests/fixtures/doctor/errors/src/__dir__/index.ts
// this file should be ignored in doctor
// @ts-ignore
import a from 'phantom-dependency';

console.log(a);
